added Shuten Trail Hard page, fixed page links

--- a/html/dungeon/shuten_trail_easy.html
+++ b/html/dungeon/shuten_trail_easy.html
@@ -40,23 +40,23 @@
                 clearing the second trail will unlock Shuten Trail Hard.
               </p>
               <ul>
-                <li><a href="#basic_strategy">Dungeon Overview</a></li>
-                <li><a href="">Floor Guide</a></li>
+                <li><a href="#dungeon_overview">Dungeon Overview</a></li>
+                <li><a href="#floor_guide">Floor Guide</a></li>
                 <ul>
-                  <li><a href="">1~2F Green Forest (Shuffle)</a></li>
-                  <li><a href="">3~4F Bamboo Forest (Shuffle)</a></li>
-                  <li><a href="">5~6F Deserted Shaft</a></li>
-                  <li><a href="">Shuten Halfway</a></li>
+                  <li><a href="#green_forest">1~2F Green Forest (Shuffle)</a></li>
+                  <li><a href="#bamboo_forest">3~4F Bamboo Forest (Shuffle)</a></li>
+                  <li><a href="#deserted_shaft">5~6F Deserted Shaft</a></li>
+                  <li><a href="#shuten_halfway">Shuten Halfway</a></li>
                   <ul>
-                    <li><a href="">Blacksmith</a></li>
-                    <li><a href="">Trader's Shop</a></li>
+                    <li><a href="#blacksmith">Blacksmith</a></li>
+                    <li><a href="#traders_shop">Trader's Shop</a></li>
                   </ul>
-                  <li><a href="">7F Inexhaustible Falls (Shuffle)</a></li>
-                  <li><a href="">8F Stalactite Cave</a></li>
-                  <li><a href="">9~10F Abyss Gorge (Shuffle)</a></li>
+                  <li><a href="#inexhaustible_falls">7F Inexhaustible Falls (Shuffle)</a></li>
+                  <li><a href="#stalactite_cave">8F Stalactite Cave</a></li>
+                  <li><a href="#abyss_gorge">9~10F Abyss Gorge (Shuffle)</a></li>
                 </ul>
-                <li><a href="">Monsters</a></li>
-                <li><a href="">Items</a></li>
+                <li><a href="#monsters">Monsters</a></li>
+                <li><a href="#items">Items</a></li>
                 </ul>
               </ul>
             </div>
@@ -112,7 +112,7 @@
               </table>
             </div>
           </div>
-          <h2 id="dungeon_characteristics">Dungeon Overview</h2>
+          <h2 id="dungeon_overview">Dungeon Overview</h2>
           <p>Three key points:</p>
           <ol>
             <li>
@@ -138,8 +138,8 @@
               </p>
             </li>
           </ol>
-          <h2>Floor Guide</h2>
-          <h3>1~2F Green Forest (Shuffle)</h3>
+          <h2 id="floor_guide">Floor Guide</h2>
+          <h3 id="green_forest">1~2F Green Forest (Shuffle)</h3>
           <p>
             The only monsters that appear are <a href="/shiren2/html/system/monster.html#mamel_family">Mamel</a> and <a href="/shiren2/html/system/monster.html#chintala_family">Chintala</a>, similar to Small Valley.<br>
             They're weak, so you shouldn't have any trouble defeating them.<br>
@@ -157,7 +157,7 @@
             It lets you keep your Gitan if you collapse, but it takes up 3 inventory slots,<br>
             so it's only recommended for those who aren't confident in their abilities.
           </p>
-          <h3>3~4F Bamboo Forest (Shuffle)</h3>
+          <h3 id="bamboo_forest">3~4F Bamboo Forest (Shuffle)</h3>
           <p>
             Monsters include <a href="/shiren2/html/system/monster.html#weather_doll_family">Weather Doll</a>, <a href="/shiren2/html/system/monster.html#ashigarudon_family">Ashigarudon</a>, <a href="/shiren2/html/system/monster.html#slug_family">Slug</a>, <a href="/shiren2/html/system/monster.html#yamikichi_family">Yamikichi</a>, and <a href="/shiren2/html/system/monster.html#piko_hammer_family">Piko Hammer</a>.
           </p>
@@ -171,7 +171,7 @@
             trouble defeating them if you leveled up in Green Forest as recommended.<br>
             Recommended to get Shiren up to level 4~5 before proceeding to 5F.
           </p>
-          <h3>5~6F Deserted Shaft</h3>
+          <h3 id="deserted_shaft">5~6F Deserted Shaft</h3>
           <p>
             Monsters include <a href="/shiren2/html/system/monster.html#piko_hammer_family">Piko Hammer</a>, <a href="/shiren2/html/system/monster.html#droplet_ninja_family">Droplet Ninja</a>, and <a href="/shiren2/html/system/monster.html#armordillo_family">Armordillo</a>.
           </p>
@@ -202,11 +202,11 @@
             A 5% loss of hunger isn't a big deal, so it's not something to worry about.<br>
             If you're concerned, you can buy some Giant Riceballs in the next area.
           </p>
-          <h3>Shuten Halfway</h3>
+          <h3 id="shuten_halfway">Shuten Halfway</h3>
           <p>
             An interval area where you can strengthen equipment and buy items from a shop.
           </p>
-          <h4>Blacksmith</h4>
+          <h4 id="blacksmith">Blacksmith</h4>
           <ul>
             <li>
               Strengthens a weapon for 1500 Gitan.
@@ -243,7 +243,7 @@
               <td>Repairs cracked bracelets.</td>
             </tr>
           </table>
-          <h4>Trader's Shop</h4>
+          <h4 id="traders_shop">Trader's Shop</h4>
           <ul>
             <li>
               Offers items for sale including Otogiriso, Giant Riceball, equipment, and scrolls.
@@ -319,7 +319,7 @@
             a Trader will visit Napus Village and offer the same items for sale.<br>
             The Napus Village Trader will disappear when you clear Shuten Trail Easy.
           </p>
-          <h3>7F Inexhaustible Falls (Shuffle)</h3>
+          <h3 id="inexhaustible_falls">7F Inexhaustible Falls (Shuffle)</h3>
           <p>
             Monsters include <a href="/shiren2/html/system/monster.html#hunger_puppet_family">Hunger Puppet</a>, <a href="/shiren2/html/system/monster.html#zalokleft_family">Zalokleft</a>, and <a href="/shiren2/html/system/monster.html#ndubba_family">N'dubba</a>.
           </p>
@@ -333,7 +333,7 @@
             So be sure to have plenty of HP before picking up items on floors where N'dubba appears.<br>
             Note that you can recover HP quickly by holding B + A buttons together.
           </p>
-          <h3>8F Stalactite Cave</h3>
+          <h3 id="stalactite_cave">8F Stalactite Cave</h3>
           <p>
             Monsters include the ones from 7F, and new arrivals <a href="/shiren2/html/system/monster.html#ashigarudon_family">Samuraidon</a> and <a href="/shiren2/html/system/monster.html#horse_ronin_family">Horse Ronin</a>.
           </p>
@@ -349,7 +349,7 @@
             Not even Dragon Grass is enough to defeat Horse Samurai in a single hit (79 HP),<br>
             so if that happens, run to the stairs while moving in a zig-zag pattern to avoid arrows.
           </p>
-          <h3>9~10F Abyss Gorge (Shuffle)</h3>
+          <h3 id="abyss_gorge">9~10F Abyss Gorge (Shuffle)</h3>
           <p>
             New arrivals for 9F include <a href="/shiren2/html/system/monster.html#nigiri_trainee_family">Nigiri Morph</a> and <a href="/shiren2/html/system/monster.html#tiger_tosser_family">Tiger Tosser</a>.
           </p>
@@ -382,7 +382,7 @@
             so you'll want to switch to higher grade materials after building the castle up a bit<br>
             to prevent the Oni from easily destroying sections of the castle during later events.
           </p>
-          <h2>Monsters</h2>
+          <h2 id="monsters">Monsters</h2>
           <div class="dungeon_monster_table">
             <table>
               <tr>
@@ -485,7 +485,7 @@
               Example: Mamel (12), Chintala (8) → 12 ÷ 20 = 0.6, so Mamel spawns 60% of the time.
             </p>
           </div>
-          <h2>Items</h2>
+          <h2 id="items">Items</h2>
           <div class="dungeon_item_table_key">
             <p>Key: <b>F</b>loor, <b>P</b>resto, <b>M</b>onster</p>
           </div>
