--- a/html/dungeon/shuten_trail_hard.html
+++ b/html/dungeon/shuten_trail_hard.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Shiren 2 | Shuten Trail Mid</title>
+    <title>Shiren 2 | Shuten Trail Hard</title>
     <meta charset="utf-8">
     <script
         src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -16,41 +16,65 @@
       <div id="sidebar" class="box sidebar"></div>
       <div id="content" class="box content">
         <div>
-          <h2 class="dungeon_heading">Shuten Trail Mid</h2>
+          <h2 class="dungeon_heading">Shuten Trail Hard</h2>
           <div class="dungeon_desc">
             <div class="dungeon_desc_text">
-              <p>Dungeon you can enter after clearing Shuten Trail Easy.</p>
               <p>
-                There are more troublesome monsters compared to the first trail.<br>
-                In particular, you'll want to be careful when progressing<br>
-                through Dororo Creek, Wandering Cave, and Phantom Pass.<br>
-                Don't hesitate to use items to make it past those areas.
+                Dungeon you can enter after clearing Shuten Trail Mid.
               </p>
               <p>
-                However, there's a boss fight on 13F, so it would be good<br>
-                to keep Decoy, Slumber, and Lightning scrolls on hand,<br>
-                along with Dragon and Swift grasses.
+                Show Saigo the Torn Manuscript over at the beach West of<br>
+                Napus Village to transform it into the Ancient Manuscript,<br>
+                and then place the Manuscript on the small shrine next to<br>
+                the waterfall in the upper-right corner of Napus Village.
+              </p>
+              <p>
+                There are a total of 15 floors with 2 of them being<br>
+                boss fights, and there is a carry-in limit of 15 items.<br>
+                You can bring any number of allies with you.
+              </p>
+              <p>
+                Just as the name implies, many stronger monsters that<br>
+                weren't present in the first two trails will make an appearance.
+              </p>
+              <p>
+                However, the items you find in this dungeon are generally<br>
+                better than the first two trails, and you can synthesize using<br>
+                Mixer monsters, so it's worth entering despite the added challenge.
+              </p>
+              <p>
+                It's possible to clear this dungeon without carry-in items,<br>
+                but you'll likely struggle if you're not a seasoned wanderer.
               </p>
               <p class="dungeon_desc_warning">
-                ※ <a href="/shiren2/html/item/material.html#perfect_wood">Perfect Wood</a> can only be found on this trail past Shuten Halfway.
-              </p>
-              <p>
-              Clearing this dungeon will open up a side quest<br>
-              that eventually leads to unlocking Shuten Trail Hard.
+                ※ <a href="/shiren2/html/item/material.html#perfect_wood">Perfect Wood</a> cannot be found in this dungeon.
               </p>
               <ul>
                 <li><a href="#dungeon_overview">Dungeon Overview</a></li>
+                <li><a href="#important_items">Important Items</a></li>
+                <ul>
+                  <li><a href="#weapon">Weapon</a></li>
+                  <li><a href="#shield">Shield</a></li>
+                </ul>
                 <li><a href="#floor_guide">Floor Guide</a></li>
                 <ul>
-                  <li><a href="#quiet_cave">1~2F Quiet Cave</a></li>
-                  <li><a href="#ravine_stream">3~4F Ravine Stream (Shuffle)</a></li>
-                  <li><a href="#lapis_grotto">5F Lapis Grotto</a></li>
-                  <li><a href="#dororo_creek">6~7F Dororo Creek (Shuffle)</a></li>
+                  <li><a href="#waterfall_basin">1~2F Waterfall Basin (Shuffle)</a></li>
+                  <li><a href="#mountain_cave">3~4F Mountain Cave</a></li>
+                  <li><a href="#hoof_rock_wall">5~6F Hoof Rock Wall</a></li>
+                  <li><a href="#dark_night_cavern">7~8F Dark Night Cavern</a></li>
                   <li><a href="#shuten_halfway">Shuten Halfway</a></li>
-                  <li><a href="#wandering_cave">8F Wandering Cave</a></li>
-                  <li><a href="#great_canyon">9~10F Great Canyon (Shuffle)</a></li>
-                  <li><a href="#phantom_pass">11~12F Phantom Pass (Shuffle)</a></li>
-                  <li><a href="#headwater_cave">13F Headwater Cave</a></li>
+                  <li><a href="#cliff_wind_hole">9F Cliff Wind Hole</a></li>
+                  <li><a href="#ancient_ruins">10~11F Ancient Ruins (Shuffle)</a></li>
+                  <li><a href="#headwater_cave">12F Headwater Cave</a></li>
+                  <li><a href="#sacred_silver_peak">13~14F Sacred Silver Peak (Shuffle)</a></li>
+                  <li><a href="#queen_spiders_nest">15F Queen Spider's Nest</a></li>
+                  <ul>
+                    <li><a href="#queen_spider_stats">Queen Spider Stats</a></li>
+                  </ul>
+                </ul>
+                <li><a href="#golden_interval">Golden Interval</a></li>
+                <ul>
+                  <li><a href="#golden_interval_items">Golden Interval Items</a></li>
                 </ul>
                 <li><a href="#monsters">Monsters</a></li>
                 <li><a href="#items">Items</a></li>
@@ -60,11 +84,11 @@
             <div class="dungeon_desc_table">
               <table>
                 <tr>
-                  <td colspan="2"><img src="/shiren2/image/dungeon/shuten_trail_mid.png" width="200" height="auto"></td>
+                  <td colspan="2"><img src="/shiren2/image/dungeon/shuten_trail_hard.png" width="200" height="auto"></td>
                 </tr>
                 <tr>
                   <th>Floors</th>
-                  <td>13F</td>
+                  <td>15F</td>
                 </tr>
                 <tr>
                   <th>Direction</th>
@@ -72,19 +96,19 @@
                 </tr>
                 <tr>
                   <th>Unlock</th>
-                  <td>Clear Shuten<br>Trail Easy.</td>
+                  <td>Clear Shuten Trail<br>Mid and complete<br>Ancient Manuscript.</td>
                 </tr>
                 <tr>
                   <th>Entrance</th>
-                  <td>Cave north of<br>Napus village.</td>
+                  <td>Behind waterfall<br>in Napus Village.</td>
                 </tr>
                 <tr>
                   <th>Reward</th>
-                  <td>Shuten Trail Hard<br>dungeon unlocked.</td>
+                  <td>-</td>
                 </tr>
                 <tr>
                   <th>Golden<br>Interval</th>
-                  <td>-</td>
+                  <td>3~6F<br>(30%, Return:7F)</td>
                 </tr>
                 <tr>
                   <th>Carry-in<br>Items</th>
@@ -96,67 +120,84 @@
                 </tr>
                 <tr>
                   <th>Shops</th>
-                  <td>Yes (8F)</td>
+                  <td>Yes (7~9F)</td>
                 </tr>
                 <tr>
                   <th>Traders</th>
-                  <td>Yes (8~12F)</td>
+                  <td>Yes (3~14F)</td>
+                </tr>
+                <tr>
+                  <th>MH</th>
+                  <td>No</td>
+                </tr>
+                <tr>
+                  <th>Sp. MH</th>
+                  <td>No</td>
+                </tr>
+                <tr>
+                  <th>Statues</th>
+                  <td>No</td>
                 </tr>
                 <tr>
                   <th>UI Color</th>
-                  <td>Light Purple</td>
+                  <td>Purple</td>
                 </tr>
               </table>
             </div>
           </div>
           <h2 id="dungeon_overview">Dungeon Overview</h2>
-          <p>Three key points:</p>
+          <p>Four key points:</p>
           <ol>
             <li>
               <p>
-                Staves can be found on the ground, unlike the first trail.<br>
-                They can be used multiple times instead of being single-use<br>
-                like scrolls and grasses, so don't hesitate to put them to use.
+                Bracelets appear.
               </p>
             </li>
             <li>
               <p>
-                Weapons and shields on the ground will be unidentified.<br>
-                Understand that you risk equipping a cursed item that you<br>
-                won't be able to remove when you equip unidentified items.<br>
-              </p>
-              <p>
-                Heaven and Earth scrolls can be found in this dungeon, but unlike<br>
-                some of the other games, they cannot remove curses in Shiren 2.
+                Can synthesize.
               </p>
             </li>
             <li>
               <p>
-                It's possible to clear this dungeon without carry-in items.<br>
-                However, if it's your first time through, it can be helpful<br>
-                to bring the equipment and items you found on the first trail.
+                Golden Interval.
+              </p>
+            </li>
+            <li>
+              <p>
+                Perfect grade materials.
               </p>
             </li>
           </ol>
+          <h2 id="important_items">Important Items</h2>
+          <h3 id="weapon">Weapon</h3>
+          <p></p>
+          <h3 id="shield">Shield</h3>
+          <p></p>
           <h2 id="floor_guide">Floor Guide</h2>
-          <h3 id="quiet_cave">1~2F Quiet Cave</h3>
+          <h3 id="waterfall_basin">1~2F Waterfall Basin (Shuffle)</h3>
           <p></p>
-          <h3 id="ravine_stream">3~4F Ravine Stream (Shuffle)</h3>
+          <h3 id="mountain_cave">3~4F Mountain Cave</h3>
           <p></p>
-          <h3 id="lapis_grotto">5F Lapis Grotto</h3>
+          <h3 id="hoof_rock_wall">5~6F Hoof Rock Wall</h3>
           <p></p>
-          <h3 id="dororo_creek">6~7F Dororo Creek (Shuffle)</h3>
+          <h3 id="dark_night_cavern">7~8F Dark Night Cavern</h3>
           <p></p>
           <h3 id="shuten_halfway">Shuten Halfway</h3>
           <p></p>
-          <h3 id="wandering_cave">8F Wandering Cave</h3>
+          <h3 id="cliff_wind_hole">9F Cliff Wind Hole</h3>
           <p></p>
-          <h3 id="great_canyon">9~10F Great Canyon (Shuffle)</h3>
+          <h3 id="ancient_ruins">10~11F Ancient Ruins (Shuffle)</h3>
           <p></p>
-          <h3 id="phantom_pass">11~12F Phantom Pass (Shuffle)</h3>
+          <h3 id="headwater_cave">12F Headwater Cave</h3>
           <p></p>
-          <h3 id="headwater_cave">13F Headwater Cave</h3>
+          <h3 id="sacred_silver_peak">13~14F Sacred Silver Peak (Shuffle)</h3>
           <p></p>
+          <h3 id="queen_spiders_nest">15F Queen Spider's Nest</h3>
+          <p></p>
+          <h4 id="queen_spider_stats">Queen Spider Stats</h4>
+          <h2 id="floor_guide">Golden Interval</h2>
+          <h3 id="golden_interval_items">Golden Interval Items</h3>
           <h2 id="monsters">Monsters</h2>
           <div class="dungeon_monster_table">
             <table>
