change order of Golden Interval in quick links

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -71,6 +71,9 @@
                   <li><a href="#golden_interval">Shop + Trader</a></li>
                 </ul>
                 <li><a href="#golden_interval">Golden Interval</a></li>
+                <ul>
+                  <li><a href="#golden_interval_items">Items</a></li>
+                </ul>
                 <li><a href="#floor_guide">No Carry-in Guide</a></li>
                 <ul>
                   <li><a href="#waterfall_basin">Important Items</a></li>
