--- a/html/dungeon/shuten_trail_hard.html
+++ b/html/dungeon/shuten_trail_hard.html
@@ -69,15 +69,14 @@
                   <li><a href="#sacred_silver_peak">13~14F Sacred Silver Peak (Shuffle)</a></li>
                   <li><a href="#queen_spiders_nest">15F Queen Spider's Nest</a></li>
                   <ul>
-                    <li><a href="#queen_spider_stats">Queen Spider Stats</a></li>
+                    <li><a href="#queen_spider_stats">Stats</a></li>
                   </ul>
-                </ul>
-                <li><a href="#golden_interval">Golden Interval</a></li>
-                <ul>
-                  <li><a href="#golden_interval_items">Golden Interval Items</a></li>
                 </ul>
                 <li><a href="#monsters">Monsters</a></li>
                 <li><a href="#items">Items</a></li>
+                <li><a href="#golden_interval">Golden Interval</a></li>
+                <ul>
+                  <li><a href="#golden_interval_items">Items</a></li>
                 </ul>
               </ul>
             </div>
